[package]
name = "anchor-counter"
version = "0.1.0"
description = "Created with Anchor"
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_counter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
solana-program = { workspace = true }

[dev-dependencies]
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }
anyhow = { workspace = true }
